--- a/monitoring/pom.xml
+++ b/monitoring/pom.xml
@@ -85,6 +85,23 @@
 			<scope>runtime</scope>
 		</dependency>
 		<!--  -->
+
+
+		<!-- Excel -->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>5.2.5</version>
+		</dependency>
+
+		<!-- CSV -->
+		<dependency>
+			<groupId>com.opencsv</groupId>
+			<artifactId>opencsv</artifactId>
+			<version>5.9</version>
+		</dependency>
+	<!--  -->
+
 	</dependencies>
 
 	<build>
